# interfaz-avhos

./: .gitignore  README.md  ROADMAP.md  package.json  pnpm-lock.yaml  tsconfig.base.json
apps/desktop/: index.html  package.json  tsconfig.json  vite.config.ts
apps/desktop/src/: App.tsx  main.tsx
apps/desktop/src-tauri/: Cargo.toml  tauri.conf.json
apps/desktop/src-tauri/capabilities/: default.json
apps/desktop/src-tauri/icons/: icon.icns
apps/desktop/src-tauri/src/: lib.rs  main.rs
apps/desktop/src/components/: ActivityBar.tsx  BottomPanel.tsx  CommandPalette.tsx  EditorArea.tsx  IDELayout.tsx  RightPanel.tsx  Sidebar.tsx  StatusBar.tsx
apps/desktop/src/components/panels/: ChatPanel.tsx  ExplorerPanel.tsx  LogsPanel.tsx  McpPanel.tsx  MemoryPanel.tsx  ModelsPanel.tsx  PlannerPanel.tsx  SettingsPanel.tsx  SkillsPanel.tsx
apps/desktop/src/data/: seed.ts
apps/desktop/src/services/: container.ts  fs-adapter-factory.ts  fs-tauri-adapter.ts  fs-vite-adapter.ts  fs-vite-plugin.ts  monaco-model-manager.ts  ollama-service.ts  project-persistence.ts  service-registry.ts  workspace-service.ts
apps/desktop/src/store/: app-store.ts
apps/desktop/src/styles/: global.css.ts
scripts/: clean.ps1
