[package]
name = "avhos-desktop"
version = "0.1.0"
description = "AVHOS — Entorno de programación nativo IA para escritorio"
edition = "2021"

[lib]
name = "avhos_desktop_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-fs = { version = "2" }
tauri-plugin-dialog = { version = "2" }
tauri-plugin-store = { version = "2" }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
